[tool.poetry]
name = "delivery-eyes"
version = "0.1.0"
description = "The module that all services access for auth."
authors = ["Sandro <physrow@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "delivery_eyes"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
pytest = "^7.2.1"
alembic = "^1.9.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sentry-sdk = "^1.15.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.249"
mypy = "^1.0.1"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
